implementa endpoints de listagem diversas