@@ -1,14 +1,12 @@
 package br.com.logisticadbc.service;
 
 import br.com.logisticadbc.dto.in.RotaCreateDTO;
-import br.com.logisticadbc.dto.out.CaminhaoDTO;
 import br.com.logisticadbc.dto.out.PostoDTO;
 import br.com.logisticadbc.dto.out.RotaComPostosDTO;
 import br.com.logisticadbc.dto.out.RotaDTO;
 import br.com.logisticadbc.entity.ColaboradorEntity;
 import br.com.logisticadbc.entity.PostoEntity;
 import br.com.logisticadbc.entity.RotaEntity;
-import br.com.logisticadbc.entity.enums.StatusCaminhao;
 import br.com.logisticadbc.entity.enums.StatusGeral;
 import br.com.logisticadbc.exceptions.RegraDeNegocioException;
 import br.com.logisticadbc.repository.RotaRepository;
@@ -47,7 +45,6 @@ public class RotaService {
             return rotaDTO;
 
         } catch (Exception e) {
-            e.printStackTrace();
             throw new RegraDeNegocioException("Aconteceu algum problema durante a criação.");
         }
     }
@@ -74,7 +71,6 @@ public class RotaService {
             return rotaDTO;
 
         } catch (Exception e) {
-            e.printStackTrace();
             throw new RegraDeNegocioException("Aconteceu algum problema durante a edição.");
         }
     }
@@ -94,7 +90,6 @@ public class RotaService {
                 colaboradorEncontrado.getRotas().add(rotaEncontrada);
 
         } catch (Exception e) {
-            e.printStackTrace();
             throw new RegraDeNegocioException("Aconteceu algum problema durante a exclusão.");
         }
     }
@@ -121,7 +116,6 @@ public class RotaService {
             return rotaDTO;
 
         } catch (Exception e) {
-            e.printStackTrace();
             throw new RegraDeNegocioException("Aconteceu algum problema durante a listagem.");
         }
     }
@@ -134,7 +128,7 @@ public class RotaService {
                 throw new RegraDeNegocioException("Local de partida não encontrado.");
             }
 
-            List<RotaDTO> rotasDTO = rotasPartida
+            return rotasPartida
                     .stream()
                     .map(rota -> {
                         RotaDTO rotaDTO = objectMapper.convertValue(rota, RotaDTO.class);
@@ -143,7 +137,6 @@ public class RotaService {
                     })
                     .toList();
 
-            return rotasDTO;
         }catch (Exception e){
             throw new RegraDeNegocioException(e.getMessage());
         }
@@ -157,7 +150,7 @@ public class RotaService {
                 throw new RegraDeNegocioException("Local de destino não encontrado.");
             }
 
-            List<RotaDTO> rotasDTO = rotasDestino
+            return rotasDestino
                     .stream()
                     .map(rota -> {
                         RotaDTO rotaDTO = objectMapper.convertValue(rota, RotaDTO.class);
@@ -166,7 +159,6 @@ public class RotaService {
                     })
                     .toList();
 
-            return rotasDTO;
         }catch(Exception e){
             throw new RegraDeNegocioException (e.getMessage());
         }
@@ -178,12 +170,10 @@ public class RotaService {
                 .stream()
                 .map(rota -> {
                     RotaDTO rotaDTO = objectMapper.convertValue(rota, RotaDTO.class);
-                    rotaDTO.setIdRota(rota.getIdRota());
                     rotaDTO.setIdUsuario(rota.getColaborador().getIdUsuario());
-                    rotaDTO.setStatus(StatusGeral.ATIVO);
                     return rotaDTO;
                 })
-                .collect(Collectors.toList());
+                .toList();
     }
 
     public List<RotaDTO> listarRotasInativas() {
@@ -192,12 +182,10 @@ public class RotaService {
                 .stream()
                 .map(rota -> {
                     RotaDTO rotaDTO = objectMapper.convertValue(rota, RotaDTO.class);
-                    rotaDTO.setIdRota(rota.getIdRota());
                     rotaDTO.setIdUsuario(rota.getColaborador().getIdUsuario());
-                    rotaDTO.setStatus(StatusGeral.INATIVO);
                     return rotaDTO;
                 })
-                .collect(Collectors.toList());
+                .toList();
     }
 
     public void cadastrarPosto(Integer idRota, Integer idPosto) throws RegraDeNegocioException {
@@ -215,7 +203,6 @@ public class RotaService {
             rotaRepository.save(rotaEncontrada);
 
         } catch (Exception e) {
-            e.printStackTrace();
             throw new RegraDeNegocioException("Aconteceu algum problema durante o cadastro.");
         }
     }
@@ -243,7 +230,6 @@ public class RotaService {
             return rotaComPostosDTO;
 
         } catch (Exception e) {
-            e.printStackTrace();
             throw new RegraDeNegocioException("Aconteceu algum problema durante a listagem.");
         }
     }
